kube/order/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
  type: NodePort
